--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <a href="https://github.com/octeufer/ExpVAE">
                 <papertitle>Exploration of Mode Collapse in Variational Autoencoder</papertitle>
               </a>
-              <p>Have you ever encountered model collaspe when training VAE model?</p>
+              <p>Have you ever encountered mode collaspe when training VAE model?</p>
               <p>This project explores the phenomenon of KL vanishing problem from the views of both encoder and decoder, by re-implementing Gaussian-VAE and Sigma-VAE.</p>
             </td>
           </tr>
