--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in different modeling architestures like Transfomer, Variational Autoencoder, Generative Adversarial Networks and Graph Convolutional Neural Networks. I focus on tackling biases in the data when applying such models considering fairness, robustness and subpopulation shifts.
+                I'm interested in different models like Transfomer, Variational Autoencoder, Generative Adversarial Networks and Graph Convolutional Neural Networks. I focus on tackling biases in the data when applying such models considering fairness, robustness and subpopulation shifts.
               </p>
             </td>
           </tr>
