--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
               </a>
               <p>How much can we trust the rules mined from one dataset when applying to the other?</p>
-              <p>This project proposes discover local decision rules that are robust across different environments.</p>
+              <p>This project proposes to discover local decision rules that are robust across different environments.</p>
             </td>
           </tr>
 
@@ -186,7 +186,7 @@
               <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
                 <papertitle>Graph Convolutional Neural Network For Link Prediction With Implicit Feedback</papertitle>
               </a>
-              <p>How to predict futuer interactions between customers and products?</p>
+              <p>How to predict future interactions between customers and products?</p>
               <p>This project explores link prediction on heterogeneous graph with multi-modal data using graph convolutional neural networks.</p>
             </td>
           </tr>
