--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <papertitle>Exceptional Model Mining on multi-modal data</papertitle>
               </a>
               <p>What your model would perform on subgroups considering spatial, temporal, text or network data?</p>
-              <p>This project proposes to explore data mining tools to discover interesting subgrouops from multi-modal data.</p>
+              <p>This project proposes to explore data mining tools to discover interesting subgroups from multi-modal data.</p>
             </td>
           </tr>
           
