--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <p>I am a postdoc research associate at the University of Edinburgh, where I work on <a href="https://governance.tas.ac.uk/">Trustworthy of Autonomous System</a> with a focus on Machine Learning.
               </p>
               <p>
-                I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="https://research.tue.nl/en/publications/the-uncertainty-in-exceptional-model-mining">Exceptional Model Mining</a>.
+                I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="data/TheUncertaintyInExceptionalModelMining.pdf">Exceptional Model Mining</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:x.d.du@hotmail.com">Email</a> &nbsp/&nbsp
