--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research is mainly about model evaluation and performance measure. I'm interested in different models like Transfomer, Variational Autoencoder, Generative Adversarial Networks and Graph Convolutional Neural Networks. I focus on tackling biases in the data when applying such models considering fairness, robustness and subpopulation shifts.
+                My research is mainly about pattern discovery as a surrogate that connects the datasets to machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for pattern summarization.
               </p>
             </td>
           </tr>
