update cv, index

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
               <p style="text-align:center">
                 <name>Xin Du</name>
               </p>
-              <p>I am a postdoc research associate at the University of Edinburgh, where I work on <a href="https://governance.tas.ac.uk/">Trustworthy of Autonomous System</a> with a focus on Machine Learning.
+              <p>I am a postdoc research associate at the University of Edinburgh, where I work on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Machine Learning.
               </p>
               <p>
                 I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="data/TheUncertaintyInExceptionalModelMining.pdf">Exceptional Model Mining</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:x.d.du@hotmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/XinDu.CV.pub.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/XinDu_CV_pub.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/Research Statement.pdf">Research Statement</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=GoYZW7cAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -87,7 +87,7 @@
               <a href="https://github.com/octeufer/VisionChecklist">
                 <papertitle>Vision Checklist: Towards Testable Error Analysis of Image Models to Help System Designers Interrogate Model Capabilities</papertitle>
               </a>
-              <p>How much can we trust the Transformers and Resnet?</p>
+              <p>How much can we trust the predictions of Image recognition model backed by Transformers and Resnet?</p>
               <p>This project proposes a set of perturbation operations that can be applied on the underlying data to generate test samples of different types. The perturbations reflect potential changes in operating environments, and interrogate various properties ranging from the strictly quantitative to more qualitative.</p>
             </td>
           </tr> 
@@ -112,7 +112,7 @@
               <a href="https://github.com/octeufer/VisionChecklist">
                 <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
               </a>
-              <p>How much can we trust the rules mined from one dataset when applying to the other?</p>
+              <p>How much can we trust the rules discovered from one dataset when applying to the others?</p>
               <p>This project proposes to discover local decision rules that are robust across different environments.</p>
             </td>
           </tr>
