--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
               <p style="text-align:center">
                 <name>Xin Du</name>
               </p>
-              <p>I am a postdoc research associate at the University of Edinburgh, where I work on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Machine Learning.
+              <p>I was a postdoc research associate at the University of Edinburgh, where I worked on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Machine Learning.
               </p>
               <p>
                 I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="data/TheUncertaintyInExceptionalModelMining.pdf">Exceptional Model Mining</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:x.d.du@hotmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/XinDu_CV_pub.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/XinDu.CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/Research Statement.pdf">Research Statement</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=GoYZW7cAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -49,7 +49,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research is mainly about pattern discovery as a surrogate that connects the datasets to machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for pattern summarization.
+                My research is mainly about pattern discovery as a surrogate that connects the datasets to machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for local pattern mining.
               </p>
             </td>
           </tr>
