--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Xin Du</name>
               </p>
-              <p>I was a postdoc research associate at the University of Edinburgh, where I worked on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Machine Learning.
+              <p>Postdoc research associate at the University of Edinburgh, where I worked on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Robustness, Explaination and Causality.
               </p>
               <p>
                 I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="data/TheUncertaintyInExceptionalModelMining.pdf">Exceptional Model Mining</a>.
