--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Xin Du</name>
               </p>
-              <p>Postdoc research associate at the University of Edinburgh, where I worked on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Robustness, Explaination and Causality.
+              <p>Postdoc research associate at the University of Edinburgh, where I worked on <a href="https://governance.tas.ac.uk/">Trustworthy Autonomous System</a> with a focus on Robustness, Explainability and Causality.
               </p>
               <p>
                 I did my PhD at Eindhoven University of Technology, where I was advised by <a href="https://www.win.tue.nl/~mpechen/">Mykola Pechenizkiy</a> and <a href="http://wwwis.win.tue.nl/~wouter/">Wouter Duivesteijn</a> with a focus on <a href="data/TheUncertaintyInExceptionalModelMining.pdf">Exceptional Model Mining</a>.
@@ -49,14 +49,14 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research is mainly about pattern discovery as a surrogate that connects the datasets to machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for local pattern mining.
+                My research is mainly about local pattern discovery connects explainable subgroups in the datasets to the machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for knowledge discovery.
               </p>
             </td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
+            <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Recent News</heading>
             </td>
@@ -65,29 +65,29 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr onmouseout="velocity()" onmouseover="velocity()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='articles/images/motion_car.png' width="180" height="180">
-              </div>
-              <script type="text/javascript">
-                function velocity() {
-                  document.getElementById('velocity_image').style.opacity = "1";
-                }
+        <tr onmouseout="velocity()" onmouseover="velocity()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='articles/images/motion_car.png' width="180" height="180">
+            </div>
+            <script type="text/javascript">
+              function velocity() {
+                document.getElementById('velocity_image').style.opacity = "1";
+              }
 
-                function velocity() {
-                  document.getElementById('velocity_image').style.opacity = "0";
-                }
-                velocity()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="articles/velocity.html">
-                <papertitle>Personal Blog: Motion and Velocity</papertitle>
-              </a>
-              <p>Thoughts about motion and velocity from a recent reading.</p>
-            </td>
-          </tr> 
+              function velocity() {
+                document.getElementById('velocity_image').style.opacity = "0";
+              }
+              velocity()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="articles/velocity.html">
+              <papertitle>Personal Blog: Motion and Velocity</papertitle>
+            </a>
+            <p>Thoughts about motion and velocity from a recent reading.</p>
+          </td>
+        </tr> 
 
           <!-- <tr onmouseout="vitchecklist()" onmouseover="vitchecklist()" >
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -127,155 +127,155 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr onmouseout="vitchecklist()" onmouseover="vitchecklist()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/framework.png' width="180">
-              </div>
-              <script type="text/javascript">
-                function vitchecklist() {
-                  document.getElementById('vitchecklist_image').style.opacity = "1";
-                }
+        <tr onmouseout="vitchecklist()" onmouseover="vitchecklist()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/framework.png' width="180">
+            </div>
+            <script type="text/javascript">
+              function vitchecklist() {
+                document.getElementById('vitchecklist_image').style.opacity = "1";
+              }
 
-                function vitchecklist() {
-                  document.getElementById('vitchecklist_image').style.opacity = "0";
-                }
-                vitchecklist()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/VisionChecklist">
-                <papertitle>Vision Checklist: Towards Testable Error Analysis of Image Models to Help System Designers Interrogate Model Capabilities</papertitle>
-              </a>
-              <p>How much can we trust the predictions of Image recognition model backed by Transformers and Resnet?</p>
-              <p>This project proposes a set of perturbation operations that can be applied on the underlying data to generate test samples of different types. The perturbations reflect potential changes in operating environments, and interrogate various properties ranging from the strictly quantitative to more qualitative.</p>
-            </td>
-          </tr> 
+              function vitchecklist() {
+                document.getElementById('vitchecklist_image').style.opacity = "0";
+              }
+              vitchecklist()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/VisionChecklist">
+              <papertitle>Vision Checklist: Towards Testable Error Analysis of Image Models to Help System Designers Interrogate Model Capabilities</papertitle>
+            </a>
+            <p>How much can we trust the predictions of Image recognition model backed by Transformers and Resnet?</p>
+            <p>This project proposes a set of perturbation operations that can be applied on the underlying data to generate test samples of different types. The perturbations reflect potential changes in operating environments, and interrogate various properties ranging from the strictly quantitative to more qualitative.</p>
+          </td>
+        </tr> 
 
-          <tr onmouseout="RDRE()" onmouseover="RDRE()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/exp1full.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function RDRE() {
-                  document.getElementById('RDRE_image').style.opacity = "1";
-                }
+        <tr onmouseout="RDRE()" onmouseover="RDRE()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/exp1full.png' width="160">
+            </div>
+            <script type="text/javascript">
+              function RDRE() {
+                document.getElementById('RDRE_image').style.opacity = "1";
+              }
 
-                function RDRE() {
-                  document.getElementById('RDRE_image').style.opacity = "0";
-                }
-                RDRE()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/VisionChecklist">
-                <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
-              </a>
-              <p>How much can we trust the rules discovered from one dataset when applying to the others?</p>
-              <p>This project proposes to discover local decision rules that are robust across different environments.</p>
-            </td>
-          </tr>
+              function RDRE() {
+                document.getElementById('RDRE_image').style.opacity = "0";
+              }
+              RDRE()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/VisionChecklist">
+              <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
+            </a>
+            <p>How much can we trust the rules discovered from one dataset when applying to the others?</p>
+            <p>This project proposes to discover local decision rules that are robust across different environments.</p>
+          </td>
+        </tr>
 
-          <tr onmouseout="ABCEI()" onmouseover="ABCEI()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/ABCEI.png' width="130">
-              </div>
-              <script type="text/javascript">
-                function ABCEI() {
-                  document.getElementById('ABCEI_image').style.opacity = "1";
-                }
+        <tr onmouseout="ABCEI()" onmouseover="ABCEI()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/ABCEI.png' width="130">
+            </div>
+            <script type="text/javascript">
+              function ABCEI() {
+                document.getElementById('ABCEI_image').style.opacity = "1";
+              }
 
-                function ABCEI() {
-                  document.getElementById('ABCEI_image').style.opacity = "0";
-                }
-                ABCEI()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
-                <papertitle>Adversarial Balancing based representation learning for Causal Effect Inference</papertitle>
-              </a>
-              <p>Can we estimate the potential effect before applying a clinical treatment plan, or a policy?</p>
-              <p>This project proposes a deep neural network framework to solve the causal inference problem with observational data. The confounding bias is tackled by applying a Generative Adversarial Netwoks.</p>
-            </td>
-          </tr>
+              function ABCEI() {
+                document.getElementById('ABCEI_image').style.opacity = "0";
+              }
+              ABCEI()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
+              <papertitle>Adversarial Balancing based representation learning for Causal Effect Inference</papertitle>
+            </a>
+            <p>Can we estimate the potential effect before applying a clinical treatment plan, or a policy?</p>
+            <p>This project proposes a deep neural network framework to solve the causal inference problem with observational data. The confounding bias is tackled by applying a Generative Adversarial Netwoks.</p>
+          </td>
+        </tr>
 
-          <tr onmouseout="SVAE()" onmouseover="SVAE()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/SVAE.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function SVAE() {
-                  document.getElementById('SVAE_image').style.opacity = "1";
-                }
+        <tr onmouseout="SVAE()" onmouseover="SVAE()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/SVAE.png' width="160">
+            </div>
+            <script type="text/javascript">
+              function SVAE() {
+                document.getElementById('SVAE_image').style.opacity = "1";
+              }
 
-                function SVAE() {
-                  document.getElementById('SVAE_image').style.opacity = "0";
-                }
-                SVAE()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/ExpVAE">
-                <papertitle>Exploration of Mode Collapse in Variational Autoencoder</papertitle>
-              </a>
-              <p>Have you ever encountered mode collaspe when training VAE model?</p>
-              <p>This project explores the phenomenon of KL vanishing problem from the views of both encoder and decoder, by re-implementing Gaussian-VAE and Sigma-VAE.</p>
-            </td>
-          </tr>
+              function SVAE() {
+                document.getElementById('SVAE_image').style.opacity = "0";
+              }
+              SVAE()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/ExpVAE">
+              <papertitle>Exploration of Mode Collapse in Variational Autoencoder</papertitle>
+            </a>
+            <p>Have you ever encountered mode collaspe when training VAE model?</p>
+            <p>This project explores the phenomenon of KL vanishing problem from the views of both encoder and decoder, by re-implementing Gaussian-VAE and Sigma-VAE.</p>
+          </td>
+        </tr>
 
-          <tr onmouseout="GCMC()" onmouseover="GCMC()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/neighbor.png' width="120">
-              </div>
-              <script type="text/javascript">
-                function GCMC() {
-                  document.getElementById('GCMC_image').style.opacity = "1";
-                }
+        <tr onmouseout="GCMC()" onmouseover="GCMC()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/neighbor.png' width="120">
+            </div>
+            <script type="text/javascript">
+              function GCMC() {
+                document.getElementById('GCMC_image').style.opacity = "1";
+              }
 
-                function GCMC() {
-                  document.getElementById('GCMC_image').style.opacity = "0";
-                }
-                GCMC()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/Graph-Convolutional-Neural-Network-For-Link-Prediction-With-Implicit-Feedback">
-                <papertitle>Graph Convolutional Neural Network For Link Prediction With Implicit Feedback</papertitle>
-              </a>
-              <p>How to predict future interactions between customers and products?</p>
-              <p>This project explores link prediction on heterogeneous graph with multi-modal data using graph convolutional neural networks.</p>
-            </td>
-          </tr>
+              function GCMC() {
+                document.getElementById('GCMC_image').style.opacity = "0";
+              }
+              GCMC()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/Graph-Convolutional-Neural-Network-For-Link-Prediction-With-Implicit-Feedback">
+              <papertitle>Graph Convolutional Neural Network For Link Prediction With Implicit Feedback</papertitle>
+            </a>
+            <p>How to predict future interactions between customers and products?</p>
+            <p>This project explores link prediction on heterogeneous graph with multi-modal data using graph convolutional neural networks.</p>
+          </td>
+        </tr>
 
-          <tr onmouseout="EMM()" onmouseover="EMM()" >
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/FNRL.png' width="160", height="100">
-              </div>
-              <script type="text/javascript">
-                function EMM() {
-                  document.getElementById('EMM_image').style.opacity = "1";
-                }
+        <tr onmouseout="EMM()" onmouseover="EMM()" >
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/FNRL.png' width="160", height="100">
+            </div>
+            <script type="text/javascript">
+              function EMM() {
+                document.getElementById('EMM_image').style.opacity = "1";
+              }
 
-                function EMM() {
-                  document.getElementById('EMM_image').style.opacity = "0";
-                }
-                EMM()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
-                <papertitle>Exceptional Model Mining on multi-modal data</papertitle>
-              </a>
-              <p>What your model would perform on subgroups considering spatial, temporal, text or network data?</p>
-              <p>This project proposes to explore data mining tools to discover interesting subgroups from multi-modal data.</p>
-            </td>
-          </tr>
+              function EMM() {
+                document.getElementById('EMM_image').style.opacity = "0";
+              }
+              EMM()
+            </script>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
+              <papertitle>Exceptional Model Mining on multi-modal data</papertitle>
+            </a>
+            <p>What your model would perform on subgroups considering spatial, temporal, text or network data?</p>
+            <p>This project proposes to explore data mining tools to discover interesting subgroups from multi-modal data.</p>
+          </td>
+        </tr>
 
         </tbody></table>
 
