updates the project description and order

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/VisionChecklist">
-              <papertitle>Vision Checklist: Towards Testable Error Analysis of Image Models to Help System Designers Interrogate Model Capabilities</papertitle>
+              <papertitle>Trustworthy Machine Learning (On-going)</papertitle>
             </a>
-            <p>How much can we trust the predictions of Image recognition model backed by Transformers and Resnet?</p>
+            <p>How much can we trust the predictions of Image recognition model backed by Deep Neural Networks like Transformers and Resnet?</p>
             <p>This project proposes a set of perturbation operations that can be applied on the underlying data to generate test samples of different types. The perturbations reflect potential changes in operating environments, and interrogate various properties ranging from the strictly quantitative to more qualitative.</p>
           </td>
         </tr> 
@@ -170,7 +170,7 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/VisionChecklist">
-              <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
+              <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles (On-going)</papertitle>
             </a>
             <p>How much can we trust the rules discovered from one dataset when applying to the others?</p>
             <p>This project proposes to discover local decision rules that are robust across different environments.</p>
@@ -195,7 +195,7 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
-              <papertitle>Adversarial Balancing based representation learning for Causal Effect Inference</papertitle>
+              <papertitle>Adversarial Balancing based representation learning for Causal Effect Inference (Finished)</papertitle>
             </a>
             <p>Can we estimate the potential effect before applying a clinical treatment plan, or a policy?</p>
             <p>This project proposes a deep neural network framework to solve the causal inference problem with observational data. The confounding bias is tackled by applying a Generative Adversarial Netwoks.</p>
@@ -220,10 +220,10 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/ExpVAE">
-              <papertitle>Exploration of Mode Collapse in Variational Autoencoder</papertitle>
+              <papertitle>Generative model with Variational Auto-encoder (On-going)</papertitle>
             </a>
-            <p>Have you ever encountered mode collaspe when training VAE model?</p>
-            <p>This project explores the phenomenon of KL vanishing problem from the views of both encoder and decoder, by re-implementing Gaussian-VAE and Sigma-VAE.</p>
+            <p>Have you ever encountered mode collaspe when training VAE model? Why does a probabilistic generative model fail to capture the data distribution?</p>
+            <p>This project explores the phenomenon of KL vanishing problem from the views of both encoder and decoder, aiming to build a more generalizable generative model for multiple datasets.</p>
           </td>
         </tr>
 
@@ -245,10 +245,10 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/Graph-Convolutional-Neural-Network-For-Link-Prediction-With-Implicit-Feedback">
-              <papertitle>Graph Convolutional Neural Network For Link Prediction With Implicit Feedback</papertitle>
+              <papertitle>Graph Convolutional Neural Network For Link Prediction With Implicit Feedback (On-going)</papertitle>
             </a>
             <p>How to predict future interactions between customers and products?</p>
-            <p>This project explores link prediction on heterogeneous graph with multi-modal data using graph convolutional neural networks.</p>
+            <p>Graph data reveals the interactive patterns in the world between multiple types of entities. How dows the interactive patterns demonstrate meaningful representations? This project explores link prediction on heterogeneous graph with multi-modal data using graph convolutional neural networks.</p>
           </td>
         </tr>
 
@@ -270,10 +270,10 @@
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://github.com/octeufer/Adversarial-Balancing-based-representation-learning-for-Causal-Effect-Inference">
-              <papertitle>Exceptional Model Mining on multi-modal data</papertitle>
+              <papertitle>Exceptional Model Mining on multi-modal data (finished)</papertitle>
             </a>
-            <p>What your model would perform on subgroups considering spatial, temporal, text or network data?</p>
-            <p>This project proposes to explore data mining tools to discover interesting subgroups from multi-modal data.</p>
+            <p>How does the interactions of spatial, temporal, text or network data reveal specific patterns in sub-populations against the overall distribution?</p>
+            <p>This project proposes to explore data mining tools to discover interesting subgroups from multi-modal data distributions by employing a probabilistic modeling method.</p>
           </td>
         </tr>
 
@@ -290,46 +290,19 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-        <tr onmouseout="vitchecklist()" onmouseover="vitchecklist()">
+        <tr onmouseout="ABCEI()" onmouseover="ABCEI()">
           <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://arxiv.org/abs/2201.11674">
-              <papertitle>Vision Checklist: Towards Testable Error Analysis of Image Models to Help System Designers Interrogate Model Capabilities</papertitle>
+            <a href="https://link.springer.com/article/10.1007/s10618-021-00759-3">
+              <papertitle>Adversarial Balancing-Based Representation Learning For Causal Effect Inference With Observational Data</papertitle>
             </a>
             <br>
             <strong>Xin Du</strong>,
-            Benedicte Legastelois,
-            Bhargavi Ganesh,
-            Ajitha Rajan,
-            Hana Chockler,
-            Vaishak Belle,
-            Stuart Anderson,
-            Subramanian Ramamoorthy
-            <br>
-            <em>arXiv</em>, 2022
-            <br>
-            <!-- <a href="http://jonbarron.info/mipnerf360">project page</a>
-            /
-            <a href="https://arxiv.org/abs/2111.12077">arXiv</a>
-            /
-            <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
-            <p></p>
-            <!-- <p>mip-NeRF can be extended to produce realistic results on unbounded scenes.</p> -->
-          </td>
-        </tr> 
-
-        <tr onmouseout="RDRE()" onmouseover="RDRE()">
-          <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://arxiv.org/abs/2109.10432">
-              <papertitle>Beyond Discriminant Patterns: On the Robustness of Decision Rule Ensembles</papertitle>
-            </a>
-            <br>
-            <strong>Xin Du</strong>,
-            Subramanian Ramamoorthy,
+            Lei Sun,
             Wouter Duivesteijn,
-            Jin Tian,
+            Alexander Nikolaev,
             Mykola Pechenizkiy
             <br>
-            <em>arXiv</em>, 2021
+            <em>Data Mining and Knowledge Discovery Special Issue: Mining for Health</em>, 2021
             <br>
             <!-- <a href="http://jonbarron.info/mipnerf360">project page</a>
             /
@@ -353,30 +326,6 @@
             Mykola Pechenizkiy
             <br>
             <em>Journal Track of EMCL PKDD</em>, 2020
-            <br>
-            <!-- <a href="http://jonbarron.info/mipnerf360">project page</a>
-            /
-            <a href="https://arxiv.org/abs/2111.12077">arXiv</a>
-            /
-            <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
-            <p></p>
-            <!-- <p>mip-NeRF can be extended to produce realistic results on unbounded scenes.</p> -->
-          </td>
-        </tr>
-
-        <tr onmouseout="ABCEI()" onmouseover="ABCEI()">
-          <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://link.springer.com/article/10.1007/s10618-021-00759-3">
-              <papertitle>Adversarial Balancing-Based Representation Learning For Causal Effect Inference With Observational Data</papertitle>
-            </a>
-            <br>
-            <strong>Xin Du</strong>,
-            Lei Sun,
-            Wouter Duivesteijn,
-            Alexander Nikolaev,
-            Mykola Pechenizkiy
-            <br>
-            <em>Data Mining and Knowledge Discovery Special Issue: Mining for Health</em>, 2021
             <br>
             <!-- <a href="http://jonbarron.info/mipnerf360">project page</a>
             /
